--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title class="owner-name">#</title>
+    <title class="Luis-Rivera">#</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -75,13 +75,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>I playing games, except sports, I hate sports.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>I rarely sleep, my usual time for going to bed is 1:00.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p>When I truely do feel motivated I can do almost anything.</p>
             </div>
         </div>
     </div>
