--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title class="Luis-Rivera">#</title>
+    <title class="owner-name">#</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -41,14 +41,14 @@
 
     <!-- First Container -->
     <div class="container-fluid bg-1 text-center">
-        <!--<h1 class="margin">Name</h1>-->
+        <<h1 class="margin">Luis Rivera</h1>
         <img src="img/avatar.png" class="img-fluid" alt="Logo" id="logo">
     </div>
 
     <!-- Second Container -->
     <div class="container-fluid bg-2 text-center" id="projects">
         <h3 class="margin">Projects</h3>
-        <p>Coming soon!</p>
+        <p>https://luisr8661.github.io/sep11-freedom-project/tool/myGame/kaboom.html!</p>
         <div class="container">
             <div class="row">
 
